--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,7 +12,7 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 10 Oct 2006
+  Last Modified: 16 Oct 2006
   Number: 3
   Version: 72
 
@@ -1184,7 +1184,7 @@ This opens doors for constructions like:
 
 Junctions work through subscripting:
 
-    print if @foo[any(1,2,3)]
+    doit() if @foo[any(1,2,3)]
 
 Junctions are specifically unordered.  So if you say
 
